<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">点名师</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">用户名：</string>
    <string name="password">密 码：</string>
    <string name="hint1">QQ/手机号</string>
    <string name="hint2">请输入密码...</string>
    <string name="tv_name">请输入:</string>
    <string name="cd_password">记住密码</string>
    <string name="login">安全登录</string>
    <string name="seek_mima">找回密码？</string>
    <string name="et_password">请输入:密码...</string>
    <string name="et_name">请输入:手机号</string>
    <string name="main_tv_phonenumber">请输入手机号：</string>
    <string name="main_et_number">请输入收件号码</string>
    <string name="main_tv_content">请输入短信内容：</string>
    <string name="main_et_sescontent">请输入短信内容</string>
    <string name="_">发送</string>
    <string name="main_btn_send">发送</string>
    <string name="title_activity_welcom">WelcomActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="loginsize_text">请登录</string>
    <string name="title_activity_prompt">PromptActivity</string>
    <string name="newest">最新</string>
    <string name="popular">热门</string>
    <string name="evaluate">评价</string>
    <string name="filter">筛选</string>

</resources>