<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_tv_phonenumber"
        />
    <EditText 
        android:id="@+id/main_et_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_et_number"
        android:inputType="number"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_tv_content"
        />
    <EditText 
        android:id="@+id/main_et_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_et_sescontent"
        android:lines="8"
        android:gravity="top"
         />
    <Button 
        android:id="@+id/main_btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_send"
        />
</LinearLayout>
