<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/newestLesson"
    android:orientation="vertical" >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="45dp"
	    android:gravity="center"
	    android:orientation="horizontal" 
	    >

	    <Button
	        android:id="@+id/tv_newest"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/but_navigation"
	        android:gravity="center"
	        android:layout_weight="1"
	        android:textColor="#838383"
	        android:text="@string/newest"
			android:textSize="15dp"
	        />
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/fengexian_bg"
	        />
	    <Button
	        android:id="@+id/tv_popular"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/but_navigation"
	        android:gravity="center"
	        android:textColor="#838383"
	        android:layout_weight="1"
	        android:text="@string/popular"
			android:textSize="15dp"
			android:clickable="true" android:onClick="onClickPopular"/>
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/fengexian_bg"
	        />
	    <Button
	        android:id="@+id/tv_rating"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/but_navigation"
	        android:gravity="center"
	        android:textColor="#838383"
	        android:layout_weight="1"
	        android:text="@string/evaluate"
			android:textSize="15dp"
	        />
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/fengexian_bg"
	        />
	    <Button
	        android:id="@+id/tv_filter"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/but_navigation"
	        android:gravity="center"
	        android:textColor="#838383"
	        android:layout_weight="1"
			android:clickable="true" android:onClick="onClickFilter"
	        android:text="@string/filter"
			android:textSize="15dp"
	        />
	    
	</LinearLayout>
	
	<ImageView 
	    android:id="@+id/fengexian"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:src="@drawable/glissade3"
	    />
    <FrameLayout
        android:id="@+id/fram_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/newestlessonListView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>

</LinearLayout>