<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="45dp"
	    android:gravity="center"
	    android:orientation="horizontal" 
	    >

	    <Button
	        android:id="@+id/tv_newest"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/but_navigation"
	        android:gravity="center"
	        android:layout_weight="1"
	        android:textColor="#838383"
	        android:text="@string/newest"
			android:textSize="15dp" android:onClick="onClickHomeNewest"
	        />
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/fengexian_bg"
	        />
	    <Button
	        android:id="@+id/tv_popular"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/but_navigation"
	        android:gravity="center"
	        android:textColor="#838383"
	        android:layout_weight="1"
	        android:text="@string/popular"
			android:textSize="15dp"
			android:clickable="true" android:onClick="onClickHomePopular"/>
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/fengexian_bg"
	        />
	    <Button
	        android:id="@+id/tv_rating"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/but_navigation"
	        android:gravity="center"
	        android:textColor="#838383"
	        android:layout_weight="1"
	        android:text="@string/evaluate"
			android:textSize="15dp"
	        />
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/fengexian_bg"
	        />
	    <Button
	        android:id="@+id/tv_filter"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/dianji_bg2"
	        android:gravity="center"
	        android:textColor="#838383"
	        android:layout_weight="1"
	        android:text="@string/filter"
			android:textSize="15dp"
	        />
	    
	</LinearLayout>
	
	<ImageView 
	    android:id="@+id/fengexian"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:src="@drawable/glissade3"
	    />
	<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:id="@+id/scrollView3">
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical"
			android:background="@drawable/white"
			>
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:gravity="center"
				android:orientation="vertical"
				>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:orientation="horizontal"
				>
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:text="年级："
						android:id="@+id/txtGrade" android:layout_gravity="center_horizontal"/>
				<FrameLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="right">
					<ImageView
							android:layout_width="30dp"
							android:layout_height="30dp"
							android:src="@drawable/arrow_filter"
							android:id="@+id/imageView4" android:layout_gravity="right"/>
				</FrameLayout>
			</LinearLayout>
			<org.apmem.tools.layouts.FlowLayout
					xmlns:android="http://schemas.android.com/apk/res/android"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:id="@+id/gradeFilter"
					>

			</org.apmem.tools.layouts.FlowLayout>
		</LinearLayout>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:gravity="center"
				android:orientation="vertical"
				>
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:layout_marginRight="10dp"
					android:orientation="horizontal"
					>
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:text="科目："
						android:id="@+id/txtSubject"
						android:layout_gravity="center_horizontal"/>
				<FrameLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="right">
					<ImageView
							android:layout_width="30dp"
							android:layout_height="30dp"
							android:src="@drawable/arrow_filter"
							android:layout_gravity="right"/>
				</FrameLayout>
			</LinearLayout>
			<org.apmem.tools.layouts.FlowLayout
					xmlns:android="http://schemas.android.com/apk/res/android"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:id="@+id/subjectFilter"
					>
			</org.apmem.tools.layouts.FlowLayout>
		</LinearLayout>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:gravity="center"
				android:orientation="vertical"
				>
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:layout_marginRight="10dp"
					android:orientation="horizontal"
					>
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:text="教材："
						android:id="@+id/txtMaterial"
						android:layout_gravity="center_horizontal"/>
				<FrameLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="right">
					<ImageView
							android:layout_width="30dp"
							android:layout_height="30dp"
							android:src="@drawable/arrow_filter"
							android:layout_gravity="right"/>
				</FrameLayout>
			</LinearLayout>
			<org.apmem.tools.layouts.FlowLayout
					xmlns:android="http://schemas.android.com/apk/res/android"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:id="@+id/materialFilter"
					>
			</org.apmem.tools.layouts.FlowLayout>
		</LinearLayout>
		<Button
				android:layout_width="100dp"
				android:layout_height="45dp"
				android:text="重置"
				android:layout_marginTop="20dp"
				android:background="@drawable/btn_filter_reset"
				android:textColor="@drawable/green"
				android:layout_margin="5dp"
				android:layout_column="16"/>
		<Button
				android:layout_width="fill_parent"
				android:layout_height="55dp"
				android:text="确认"
				android:layout_marginTop="40dp"
				android:background="@drawable/but_bg2"
				android:textColor="@drawable/white"
				android:layout_margin="5dp"
				android:layout_column="16"/>
	</LinearLayout>
	</ScrollView>
</LinearLayout>